# caw-project

./: .gitignore  Makefile  build.sh  cabal.project  cabal.project.freeze.ghc84
caw/: ChangeLog.md  caw.cabal
caw-api/: ChangeLog.md  caw-api.cabal
caw-api/src/Caw/: API.hs  Types.hs
caw-build/: ChangeLog.md  caw-build.cabal
caw-build/src/Caw/: BuildSystem.hs
caw-build/src/Caw/BuildSystem/: LanguageC.hs
caw/src/: Build.hs  CisawClient.hs  Config.hs  Generate.hs  Main.hs  Profile.hs  Repo.hs  Utils.hs  Verify.hs
