name:                caw
version:             0.1.0.0
synopsis:            Command line driver for cisaw
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas M. DuBuisson
maintainer:          tommd@galois.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable caw
  main-is:             Main.hs
  other-modules:       Profile, Config,
                       CisawClient,
                       Verify,
                       Utils,
                       Generate,
                       Build,
                       Repo
  other-extensions:    StandaloneDeriving, FlexibleInstances, OverloadedStrings, ScopedTypeVariables
  build-depends:       base >=4.9 && <4.12,
                       filepath >=1.4 && <1.5,
                       directory,
                       process,
                       temporary,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       yaml-light >=0.1 && <0.2,
                       optparse-applicative >= 0.14,
                       caw-build,
                       caw-api,
                       servant, servant-client >= 0.13,
                       servant-client-core,
                       http-client,
                       http-client-tls,
                       http-types,
                       network,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       attoparsec >= 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
